Update header styling

--- a/index.html
+++ b/index.html
@@ -12,19 +12,26 @@
 <body>
 <section>
     <div class="container">
-        <img src="resources/images/port.jpg" class="photo img-circle img-responsive pull-right" title="My dog has a big head">
-        <h1>Tiffany Cheng</h1>
-        <p>
-            <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
-            <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
-            <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
-            <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
-        </p>
-        <br>
-        <p>Resume: <a href="resources/files/TiffanyCheng_Resume_3-23-18.docx" target="_blank">Word DOC</a> | <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank">Stylized PDF</a></p>
-        <!--
-        <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print,
-            photography, animation</p> -->
+        <div class="row">
+            <div class="col-sm-4 col-xs-12 pull-right port">
+                <img src="resources/images/port.jpg" class="photo img-circle" title="My dog has a big head">
+            </div>
+            <div class="col-sm-8 col-xs-12">
+                <h1>Tiffany Cheng</h1>
+                <p>
+                    <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
+                    <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
+                    <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
+                    <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
+                </p>
+                <br>
+                <p>Resume: <a href="resources/files/TiffanyCheng_Resume_3-23-18.docx" target="_blank">Word DOC</a> | <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank">Stylized PDF</a></p>
+                <!--
+                <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print,
+                    photography, animation</p> -->
+            </div>
+        </div>
+
         <br>
     </div>
 </section>
