Some minor style updates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tiffany Cheng's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="resources/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Vidaloka" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Vidaloka|Noto+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
