--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<section>
+<header>
     <div class="container">
         <div class="row">
             <div class="col-sm-4 col-xs-12 pull-right port">
@@ -25,7 +25,10 @@
                     <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
                 </p>
                 <br>
-                <p>Resume: <a href="resources/files/TiffanyCheng_Resume_3-23-18.docx" target="_blank">Word DOC</a> | <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank">Stylized PDF</a></p>
+                <p>
+                    <a href="resources/files/TiffanyCheng_Resume_3-23-18.docx" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Resume.doc</a><br>
+                    <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Stylized-Resume.pdf</a>
+                </p>
                 <!--
                 <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print,
                     photography, animation</p> -->
@@ -34,7 +37,7 @@
 
         <br>
     </div>
-</section>
+</header>
 <section>
     <div class="container">
         <h2>Web Development</h2>
