Add dashboard screenshot

--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
                     <h4 class="modal-title">Company Reporting Dashboard</h4>
                 </div>
                 <div class="modal-body">
+                    <p><img src="resources/images/dashboard_cap.jpg" class="img-responsive"></p>
                     <p>Non-functional demo for Director presentation, completed in 6 days.<br>Demo sent to Salesforce
                         team to convert and connect real-time data.</p>
                     <button type="button" class="btn btn-default" onclick="window.open('https://tiffscheng.github.io/dashboard/');" value="See Demo">
