More updates again k

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         <h2>Web Development</h2>
         <div class="row">
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#dashboard"><img src="resources/images/thumbnails/dashboard-ss.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#dashboard"><img src="resources/images/thumbnails/dashboard-ss.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#smkbiz"><img src="resources/images/thumbnails/smkbiz_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#smkbiz"><img src="resources/images/thumbnails/smkbiz_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#tekshield"><img src="resources/images/thumbnails/tekshield_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#tekshield"><img src="resources/images/thumbnails/tekshield_thumb.jpg" class="img-responsive"></a>
             </div>
         </div>
     </div>
@@ -62,19 +62,19 @@
         <h2>Illustration and Iconography</h2>
         <div class="row">
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#icons"><img src="resources/images/thumbnails/icons_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#icons"><img src="resources/images/thumbnails/icons_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#icons2"><img src="resources/images/thumbnails/icons2_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#icons2"><img src="resources/images/thumbnails/icons2_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#jedi"><img src="resources/images/thumbnails/jedi_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#jedi"><img src="resources/images/thumbnails/jedi_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#camera"><img src="resources/images/thumbnails/camera.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#camera"><img src="resources/images/thumbnails/camera.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#server"><img src="resources/images/thumbnails/server_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#server"><img src="resources/images/thumbnails/server_thumb.jpg" class="img-responsive"></a>
             </div>
         </div>
     </div>
@@ -84,25 +84,25 @@
         <h2>Print and Other</h2>
         <div class="row">
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#wireframe"><img src="resources/images/thumbnails/wireframe_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#wireframe"><img src="resources/images/thumbnails/wireframe_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#uhproject"><img src="resources/images/thumbnails/uhproject_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#uhproject"><img src="resources/images/thumbnails/uhproject_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#gumpack"><img src="resources/images/thumbnails/gumpack_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#gumpack"><img src="resources/images/thumbnails/gumpack_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#ornament"><img src="resources/images/thumbnails/ornament_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#ornament"><img src="resources/images/thumbnails/ornament_thumb.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#stpat"><img src="resources/images/thumbnails/stpatty-postcard_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#stpat"><img src="resources/images/thumbnails/stpatty-postcard_thumb.jpg" class="img-responsive"></a>
             </div>
             <!-- <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#selah"><img src="resources/images/thumbnails/selah_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#selah"><img src="resources/images/thumbnails/selah_thumb.jpg" class="img-responsive"></a>
             </div> -->
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" class="btn" data-toggle="modal" data-target="#slidedeck"><img src="resources/images/thumbnails/slidedeck_thumb.jpg" class="img-responsive"></a>
+                <a href="#" data-toggle="modal" data-target="#slidedeck"><img src="resources/images/thumbnails/slidedeck_thumb.jpg" class="img-responsive"></a>
             </div>
         </div>
     </div>
@@ -431,8 +431,7 @@
                         team to convert and connect real-time data.</p>
                     <button type="button" class="btn btn-default" onclick="window.open('https://tiffscheng.github.io/dashboard/');" value="See Demo">
                         See Demo
-                    </button>
-                    <br><br>
+                    </button>&nbsp;
                     <button type="button" class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/dashboard');" value="See Code">
                         See Code
                     </button>
