--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
 <footer>
     <div class="container">
-        <div class="pull-left"><p><i>Please be continue to check back as this site is still a work in progress.</i></p></div>
+        <div class="pull-left"><p><i>Please continue to check back as this site is still a work in progress.</i></p></div>
         <div class="pull-right">
             <p>
                 <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
