--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tiffany Cheng's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="resources/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Vidaloka|Noto+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -19,10 +18,9 @@
             <div class="col-sm-8 col-xs-12">
                 <h1>Tiffany Cheng</h1>
                 <p>
-                    <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
-                    <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
-                    <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
-                    <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
+                    <a href="#about">About Me</a><br />
+                    <a href="#gallery">Sample Work</a><br />
+                    <a href="#contact">Contact</a>
                 </p>
                 <br>
                 <p>
@@ -38,8 +36,15 @@
         <br>
     </div>
 </header>
-<section>
+<section id="about">
+    <h1>About Me</h1>
+    <p>
+        Text
+    </p>
+</section>
+<section id="gallery">
     <div class="container">
+        <h1>Sample Work</h1>
         <h2>Web Development</h2>
         <div class="row">
             <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -107,6 +112,15 @@
         </div>
     </div>
 
+</section>
+<section id="contact">
+    <h1>Contact</h1>
+    <p>
+        <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
+        <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
+        <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
+        <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
+    </p>
 </section>
     <!-- Begin Modals -->
     <article class="modal fade" id="icons" tabindex="-1" role="dialog" aria-labelledby="icons" aria-hidden="true">
@@ -466,14 +480,6 @@
 <footer>
     <div class="container">
         <div class="pull-left"><p><i>Please continue to check back as this site is still a work in progress.</i></p></div>
-        <div class="pull-right">
-            <p>
-                <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
-                <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
-                <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
-                <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
-            </p>
-        </div>
     </div>
 </footer>
 
