--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
     </div>
 </header>
 <section id="about">
-    <h1>About Me</h1>
-    <p>
-        Text
-    </p>
+    <div class="container">
+        <h1>About Me</h1>
+        <p>
+            Text
+        </p>
+    </div>
 </section>
 <section id="gallery">
     <div class="container">
@@ -114,13 +116,15 @@
 
 </section>
 <section id="contact">
-    <h1>Contact</h1>
-    <p>
-        <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
-        <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
-        <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
-        <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
-    </p>
+    <div class="container">
+        <h1>Contact</h1>
+        <p>
+            <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
+            <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
+            <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
+            <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
+        </p>
+    </div>
 </section>
     <!-- Begin Modals -->
     <article class="modal fade" id="icons" tabindex="-1" role="dialog" aria-labelledby="icons" aria-hidden="true">
