--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <header>
     <div class="container">
         <div class="row">
-            <div class="col-sm-4 col-xs-12 pull-right port">
+            <!--<div class="col-sm-4 col-xs-12 pull-right port">
                 <img src="resources/images/port.jpg" class="photo img-circle" title="My dog has a big head">
-            </div>
+            </div>-->
             <div class="col-sm-8 col-xs-12">
                 <h1>Tiffany Cheng</h1>
                 <p>
@@ -39,8 +39,9 @@
 <section id="about">
     <div class="container">
         <h1>About Me</h1>
+        <h2>Education</h2>
         <p>
-            Text
+            At the University of Houston, I studied various aspects of Digital Media. It covered both print and digital forms of publishing, photography, web development, and computer languages such as PHP and SQL.
         </p>
     </div>
 </section>
