--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 <header>
     <div class="container">
         <div class="row">
-            <!--<div class="col-sm-4 col-xs-12 pull-right port">
+            <div class="port">
                 <img src="resources/images/port.jpg" class="photo img-circle" title="My dog has a big head">
-            </div>-->
-            <div class="col-sm-8 col-xs-12">
                 <h1>Tiffany Cheng</h1>
                 <p>
                     <a href="#about">About Me</a><br />
