--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <div class="container">
         <div class="row">
-            <div class="port">
+            <div class="col-xs-12">
                 <img src="resources/images/port.jpg" class="photo img-circle" title="My dog has a big head">
                 <h1>Tiffany Cheng</h1>
                 <p>
