--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <img src="resources/images/port.jpg" class="photo img-circle" title="My dog has a big head">
+                <img src="resources/images/port.jpg" class="photo img-circle" title="My dog has a big head"><br />
                 <h1>Tiffany Cheng</h1>
                 <p>
                     <a href="#about">About Me</a><br />
@@ -37,9 +37,25 @@
 <section id="about">
     <div class="container">
         <h1>About Me</h1>
-        <h2>Education</h2>
+        <h2>Formal Education</h2>
         <p>
-            At the University of Houston, I studied various aspects of Digital Media. It covered both print and digital forms of publishing, photography, web development, and computer languages such as PHP and SQL.
+            At the University of Houston, the Digital Media program covered:<br>
+            print and digital publishing,<br>
+            photography,<br>
+            web development,<br>
+            computer languages such as PHP and SQL
+        </p>
+        <h2>Self Education</h2>
+        <p>
+            I have been researching, learning, and practicing web development since the age of 13 when I got my first computer.<br>
+            I started creating my own websites using the framework on social sites, then from scratch.<br>
+            Over the years, I've accumulated hundreds of hours of online courses and tutorials.<br>
+            Through work and personal projects, I've executed the variety of skills I learned:<br>
+            HTML and CSS - frameworks and preprocessors,<br>
+            javascript - vanilla, jQuery, angular, node,<br>
+            responsive design,<br>
+            database management and SQL querying,<br>
+            web analytics
         </p>
     </div>
 </section>
