--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body>
 <header>
     <div class="container">
-                <img src="resources/images/port.jpg" class="photo img-circle" title="My dog has a big head"><br />
-                <h1>Tiffany Cheng</h1>
-                <p>
-                    <a href="#about">About Me</a><br />
-                    <a href="#gallery">Sample Work</a><br />
-                    <a href="#contact">Contact</a>
-                </p>
-                <br>
-                <p>
-                    <a href="resources/files/TiffanyCheng_Resume_3-23-18.docx" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Resume.doc</a><br>
-                    <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Stylized-Resume.pdf</a>
-                </p>
-                <!--
-                <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print,
-                    photography, animation</p> -->
+        <img src="resources/images/port.jpg" class="photo img-circle" title="My dog has a big head"><br />
+        <h1>Tiffany Cheng</h1>
+        <p>
+            <a href="#about">About Me</a><br />
+            <a href="#gallery">Sample Work</a><br />
+            <a href="#contact">Contact</a>
+        </p>
+        <br>
+        <p>
+            <a href="resources/files/TiffanyCheng_Resume_3-23-18.docx" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Resume.doc</a><br>
+            <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Stylized-Resume.pdf</a>
+        </p>
+        <!--
+        <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print,
+            photography, animation</p> -->
     </div>
 </header>
 <section id="about">
@@ -50,6 +50,20 @@
             responsive design,<br>
             database management and SQL querying,<br>
             web analytics
+        </p>
+        <h2>My Passions</h2>
+        <p>
+            One of my greatest motivations is the desire to solve problems.<br>
+            Along with a mentality that nothing is ever perfect, I'm always finding ways to make improvements to every last detail.
+            I'm also a people pleaser, and I love to help people in any way that I can.<br>
+            My personal interests include:<br>
+            sports and fitness - playing flag football,<br>
+            yoga,<br>
+            dogs,<br>
+            cooking and baking with healthy ingredients,<br>
+            lettering and typography,<br>
+            using spreadsheets to plan and automate calculations,<br>
+            couponing
         </p>
     </div>
 </section>
