--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
             <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
         </p>
-        <form id="ajax" method="post" action="resources/contact.php">
+        <form id="ajax" method="post" action="https://formspree.io/tiffscheng@gmail.com">
             <div class="field">
                 <label for="name" class="hidden">Name:</label>
                 <input class="form-control" type="text" id="name" name="name" placeholder="Name" required>
@@ -167,7 +167,6 @@
                 <button class="form-control" type="submit">Send</button>
             </div>
         </form>
-        <div id="form-messages"></div>
     </div>
 </section>
     <!-- Begin Modals -->
