--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
                 <label for="name" class="hidden">Name:</label>
                 <input class="form-control" type="text" id="name" name="name" placeholder="Name" required>
             </div>
-
             <div class="field">
                 <label for="email" class="hidden">Email:</label>
-                <input class="form-control" type="email" id="email" name="email" placeholder="Email" required>
+                <input class="form-control" type="email" id="email" name="_replyto" placeholder="Email" required>
             </div>
-
             <div class="field">
                 <label for="message" class="hidden">Message:</label>
                 <textarea class="form-control" id="message" name="message" placeholder="Enter your message here.." required></textarea>
             </div>
-
+            <div class="field">
+                <input class="hidden" name="_gotcha">
+            </div>
             <div class="field">
                 <button class="form-control" type="submit">Send</button>
             </div>
