--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
         <h1>About Me</h1>
         <h2>Formal Education</h2>
         <p>
-            At the University of Houston, the Digital Media program covered:<br>
+            At the University of Houston, my chosen program covered:<br>
+            web development,<br>
+            computer languages such as PHP, SQL, and C++<br>
             print and digital publishing,<br>
             photography,<br>
-            web development,<br>
-            computer languages such as PHP and SQL
+            project management,<br>
+            leadership and supervision<br>
         </p>
         <h2>Self Education</h2>
         <p>
