Add hyphen to self-education

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             project management,<br>
             leadership and supervision<br>
         </p>
-        <h2>Self Education</h2>
+        <h2>Self-Education</h2>
         <p>
             I have been researching, learning, and practicing web development since the age of 13 when I got my first computer.<br>
             I started creating my own websites using the framework on social sites, then from scratch.<br>
