Updated About Me

--- a/index.html
+++ b/index.html
@@ -31,42 +31,49 @@
 <section id="about">
     <div class="container">
         <h1>About Me</h1>
+        <p><i>*Thank you for taking the time to view my portfolio. I have just recently come back to update it after 4-5 years.<br>
+            Please come back again to see my progress!</i></p>
         <h2>Formal Education</h2>
-        <p>
-            At the University of Houston, my chosen program covered:<br>
-            web development,<br>
-            computer languages such as PHP, SQL, and C++<br>
-            print and digital publishing,<br>
-            photography,<br>
-            project management,<br>
-            leadership and supervision<br>
-        </p>
+        <p>At the University of Houston, my chosen program covered:</p>
+        <ul>
+            <li>web development,</li>
+            <li>branding and design</li>
+            <li>computer languages such as PHP, SQL, and C++</li>
+            <li>print and digital publishing,</li>
+            <li>photography and videography,</li>
+            <li>project management,</li>
+            <li>leadership and supervision</li>
+        </ul>
         <h2>Self-Education</h2>
         <p>
             I have been researching, learning, and practicing web development since the age of 13 when I got my first computer.<br>
-            I started creating my own websites using the framework on social sites, then from scratch.<br>
-            Over the years, I've accumulated hundreds of hours of online courses and tutorials.<br>
-            Through work and personal projects, I've executed the variety of skills I learned:<br>
-            HTML and CSS - frameworks and preprocessors,<br>
-            javascript - vanilla, jQuery, angular, node,<br>
-            responsive design,<br>
-            database management and SQL querying,<br>
-            web analytics
+            I started creating my own websites using the frameworks on social sites, then from scratch.<br>
+            Over the years, I've spent hundreds of hours completing online courses and tutorials, and<br>
+            I am currently working on certifications from Google and the University of Michigan.<br>
+            Through work and personal projects, I've honed in on these skills:
         </p>
+        <ul>
+            <li>HTML and CSS with frameworks and preprocessors,</li>
+            <li>javascript - vanilla, jQuery, angular, vue.js,</li>
+            <li>wireframing and prototyping,</li>
+            <li>responsive design,</li>
+            <li>web analytics</li>
+        </ul>
         <h2>My Passions</h2>
         <p>
             One of my greatest motivations is the desire to solve problems.<br>
             Along with a mentality that nothing is ever perfect, I'm always finding ways to make improvements to every last detail.<br>
             I'm also a people pleaser, and I love to help people in any way that I can.<br>
-            My personal interests include:<br>
-            sports and fitness - playing flag football,<br>
-            yoga,<br>
-            dogs,<br>
-            cooking and baking with healthy ingredients,<br>
-            lettering and typography,<br>
-            using spreadsheets to plan and automate calculations,<br>
-            couponing
+            My personal interests include:
         </p>
+        <ul>
+            <li>sports and fitness - mainly flag football and yoga,</li>
+            <li>hiking with my dogs,</li>
+            <li>cooking and baking with healthy ingredients,</li>
+            <li>lettering and typography,</li>
+            <li>crafting with my Cricut and sewing machine</li>
+            <li>planning and organizing events with complex spreadsheets</li>
+        </ul>
     </div>
 </section>
 <section id="gallery">
