--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
                     <br>
                 </div>
                 <div class="modal-footer">
-                    <p>Worked with <a href="www.codeghostcreative.com" target="_blank">Codeghost Creative</a>
+                    <p>Worked with <a href="https://www.codeghostcreative.com" target="_blank">Codeghost Creative</a>
                         partner.<br>Photos
-                        edited in Photoshop- Working gray, dot gain 20%. Pages laid out in InDesign.</p>
+                        edited in Photoshop- Working gray, dot gain 20%. Pages laid out in InDesign. Can easily be converted to print.</p>
                 </div>
             </div>
         </div>
