--- a/index.html
+++ b/index.html
@@ -474,9 +474,12 @@
                     <br>
                 </div>
                 <div class="modal-footer">
-                    <p>Complied to University of Houston's
+                    <p>Complied with University of Houston's
                         <a href="http://www.uh.edu/marketing/brand/graphic-standards/style-guidelines/" target="_blank">style
-                            guidelines</a>. Used Illustrator and InDesign.</p>
+                            guidelines</a>. Created with Illustrator and InDesign.</p>
+                    <p>
+                        Conducted study to determine which format works better to present information and to which demographics each format is more effective. After creating the hypothesis and determining the methods to test, I was able to gather a small group of participants. Created infographic with findings to present for thesis. In the future, I would repeat this study with a larger sample size and more refined test materials.
+                    </p>
                 </div>
             </div>
         </div>
